--- a/src/style/base/_reset.scss
+++ b/src/style/base/_reset.scss
@@ -1,10 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 * {
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;;
+  font-family: 'Poppins', sans-serif;
+}
+
+html, body {
+  margin: 0;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 td, th {
-  padding: 0.5rem;
+  padding: 1rem;
 }
