--- a/src/style/layout/_body.scss
+++ b/src/style/layout/_body.scss
@@ -1,18 +1,48 @@
-// Page body
-.site-body {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: auto;
+// Page 
+.site {
+  min-height: 100vh;
+  width: 100vw;
 }
 
-.site-body__aside {
-  grid-column: 1 / 3;
-  padding: 0.5rem;
+.site__header {
+  position: fixed;
+  top: 0;
+  padding: 0.5rem 0.5rem;
+
+  @include media-query("medium") {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
+.site__inner {
+  padding-top: 4rem;
   height: 100%;
+  width: 100%;
+  background-color: $offwhite;
 }
 
-.site-body__main {
-  grid-column: 3 / 13;
-  padding: 1rem 0;
-  border-left: 1px solid $jumbo;
+.site__aside {
+  height: 100%;
+  width: 100%;
+  
+  @include media-query("medium") {
+    position: fixed;
+    top: 5.5rem;
+    left: 0;
+    width: 13rem;
+    overflow-x: hidden;
+    z-index: 1;
+    background-color: $offwhite;
+  }
+}
+
+.site__main {
+  width: 100%;
+
+  @include media-query("medium") {
+    margin-left: 13rem;
+    width: calc(100% - 13rem);
+    overflow-y: auto;
+  }
 }
