--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,4 +14,5 @@
 @import "./pages/billing";
 
 //Components
-@import "./components/logo"
+@import "./components/logo";
+@import "./components/pagination";
