--- a/src/style/base/_reset.scss
+++ b/src/style/base/_reset.scss
@@ -1,16 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
+//Resets
 * {
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
 
-html, body {
+html,
+body {
   margin: 0;
   max-width: 100%;
   overflow-x: hidden;
 }
 
-td, th {
+td,
+th {
   padding: 1rem;
 }
